--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: History-of-the-United-Netherlands-1587c_4853
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Motley, John Lothrop
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1583
     wikipedia: http://en.wikipedia.org/wiki/John_Lothrop_Motley
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4853#History-of-the-United-Netherlands-1587c
 gutenberg_issued: '2004-01-01'
 gutenberg_type: Text
 identifiers:
